Bug 312341 - Alt + Number to switch tab is missing in rekonq 2.0
Summary: Alt + Number to switch tab is missing in rekonq 2.0
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 2.0
Platform: Chakra Linux
: NOR minor
Target Milestone: 2.0
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-29 15:26 UTC by Weng Xuetian
Modified: 2013-01-02 10:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Weng Xuetian 2012-12-29 15:26:30 UTC
Just as summary describe, since 1.80 the alt + number to switch tab doesn't work anymore.

Reproducible: Always
Comment 1 Andrea Diamantini 2013-01-02 10:33:38 UTC
Git commit b96d7a83dc5f25429b378fb4a4c3cf9399830491 by Andrea Diamantini.
Committed on 02/01/2013 at 11:32.
Pushed by adjam into branch 'master'.

Restore rekonq 1.x shortcuts

ALT + #number to change tabs
CTRL + #number to load favorites

M  +1    -0    src/kspellplugin.cpp
M  +37   -0    src/tabwindow/tabwindow.cpp
M  +2    -0    src/tabwindow/tabwindow.h

http://commits.kde.org/rekonq/b96d7a83dc5f25429b378fb4a4c3cf9399830491