Restore rekonq 1.x shortcuts

ALT + #number to change tabs
CTRL + #number to load favorites

BUG: 312341